--- a/Podstrona-1/index.html
+++ b/Podstrona-1/index.html
@@ -27,45 +27,45 @@
               </a>
             </div>
             <nav role="navigation" class="nav_04-menu w-nav-menu">
-              <div class="nav_04-menu-links">
-                <div class="nav-link-wrap">
-                  <a href="#" class="nav-link w-inline-block">
-                    <p class="text-simple">Strona główna</p>
-                    <div class="nav-link-bg"></div>
-                  </a>
-                </div>
-                <div class="nav-link-wrap">
-                  <a href="#" class="nav-link w-inline-block">
-                    <p class="text-simple">Inspiracje</p>
-                    <div class="nav-link-bg"></div>
-                  </a>
-                </div>
-                <div class="nav-link-wrap flex-center">
-                  <div>
-                    <a href="#" target="_blank" class="nav-link w-inline-block">
-                      <p class="text-simple">Podróże</p>
-                      <div class="nav-badge">3</div>
-                      <div class="nav-link-bg"></div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="nav_menu-right">
-                <div class="nav-link-wrap">
-                  <a href="#" class="nav-link w-inline-block">
-                    <p class="text-simple">Poradniki</p>
-                    <div class="nav-link-bg"></div>
-                  </a>
-                </div>
-                <div class="nav-link-wrap">
-                  <a href="#" class="nav-link w-inline-block">
-                    <p class="text-simple">Kim jesteśmy?</p>
-                    <div class="nav-link-bg"></div>
-                  </a>
-                </div>
-                <div class="nav_buttons-wrap">
-                  <div>
-                    <a href="#" class="button w-inline-block">
+  <div class="nav_04-menu-links">
+    <div class="nav-link-wrap">
+      <a href="/" class="nav-link w-inline-block">
+        <p class="text-simple">Strona główna</p>
+        <div class="nav-link-bg"></div>
+      </a>
+    </div>
+    <div class="nav-link-wrap">
+      <a href="/Podstrona-2/" class="nav-link w-inline-block">
+        <p class="text-simple">Inspiracje</p>
+        <div class="nav-link-bg"></div>
+      </a>
+    </div>
+    <div class="nav-link-wrap flex-center">
+      <div>
+        <a href="/Podstrona-2/" class="nav-link w-inline-block">
+          <p class="text-simple">Podróże</p>
+          <div class="nav-badge">3</div>
+          <div class="nav-link-bg"></div>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="nav_menu-right">
+    <div class="nav-link-wrap">
+      <a href="/Podstrona-3/" class="nav-link w-inline-block">
+        <p class="text-simple">Poradniki</p>
+        <div class="nav-link-bg"></div>
+      </a>
+    </div>
+    <div class="nav-link-wrap">
+      <a href="/Podstrona-1/" class="nav-link w-inline-block">
+        <p class="text-simple">Kim jesteśmy?</p>
+        <div class="nav-link-bg"></div>
+      </a>
+    </div>
+    <div class="nav_buttons-wrap">
+      <div>
+                     <a href="/Podstrona-4/" class="button w-inline-block">
                       <p class="text-simple">Skontaktuj się!</p>
                       <div class="button-icon">
                         <div class="button-icon w-embed"><svg height="17" viewbox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg" class="button-icon">
@@ -688,101 +688,128 @@
                           </div>
                         </div>
                       </div>
-                      <div id="w-node-_68a6d974-27c2-1b73-4cbb-5df1e7502f72-05a77523" class="footer_04-grid">
-                        <div class="footer_04-content-grid">
-                          <div class="footer_04-heading">
-                            <p class="heading-style-h5">Nasze linki</p>
-                          </div>
-                          <div class="footer_list-wrap">
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Kontakt</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">O nas</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Polityka prywatności</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Wskazówki podróżnicze</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="footer_04-content-grid">
-                          <div class="footer_04-heading">
-                            <p class="heading-style-h5">Nasze zasoby</p>
-                          </div>
-                          <div class="footer_list-wrap">
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Blog</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Galeria</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Pytania</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Recenzje</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="footer_04-content-grid">
-                          <div class="footer_04-heading">
-                            <p class="heading-style-h5">Inne powiązane</p>
-                          </div>
-                          <div class="footer_list-wrap">
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Linki zewnętrzne</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">FAQ</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Dzięki za odwiedziny</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                            <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
-                                <p class="text-size-regular-5">Polityka prywatności</p>
-                                <div class="link-block-underline link_underline-footer"></div>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                      <div class="footer_04-grid">
+  <div class="footer_04-content-grid">
+    <div class="footer_04-heading"><p class="heading-style-h5">Nasze linki</p></div>
+    <div class="footer_list-wrap">
+      <div class="footer_link-wrap">
+        <a href="/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Kontakt</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-1/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">O nas</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Polityka prywatności</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-3/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Wskazówki podróżnicze</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer_04-content-grid">
+    <div class="footer_04-heading"><p class="heading-style-h5">Nasze zasoby</p></div>
+    <div class="footer_list-wrap">
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-2/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Blog</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-2/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Galeria</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-3/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Pytania</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-2/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Recenzje</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer_04-content-grid">
+    <div class="footer_04-heading"><p class="heading-style-h5">Inne powiązane</p></div>
+    <div class="footer_list-wrap">
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-2/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Linki zewnętrzne</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-3/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">FAQ</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Dzięki za odwiedziny</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Polityka prywatności</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+  <div class="footer_04-content-grid">
+    <div class="footer_04-heading"><p class="heading-style-h5">Inne powiązane</p></div>
+    <div class="footer_list-wrap">
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-2/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Linki zewnętrzne</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/Podstrona-3/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">FAQ</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <a href="/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Dzięki za odwiedziny</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+      <div class="footer_link-wrap">
+        <!-- TODO: create /polityka-prywatnosci/ when ready -->
+        <a href="/" class="text-style-link link_footer w-inline-block">
+          <p class="text-size-regular-5">Polityka prywatności</p>
+          <div class="link-block-underline link_underline-footer"></div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
                     </div>
                     <div class="footer_04-made-by-section">
                       <div class="opacity-50-pct">
