--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -27,45 +27,45 @@
               </a>
             </div>
             <nav role="navigation" class="nav_04-menu w-nav-menu">
-  <div class="nav_04-menu-links">
-    <div class="nav-link-wrap">
-      <a href="/" class="nav-link w-inline-block">
-        <p class="text-simple">Strona główna</p>
-        <div class="nav-link-bg"></div>
-      </a>
-    </div>
-    <div class="nav-link-wrap">
-      <a href="/Podstrona-2/" class="nav-link w-inline-block">
-        <p class="text-simple">Inspiracje</p>
-        <div class="nav-link-bg"></div>
-      </a>
-    </div>
-    <div class="nav-link-wrap flex-center">
-      <div>
-        <a href="/Podstrona-2/" class="nav-link w-inline-block">
-          <p class="text-simple">Podróże</p>
-          <div class="nav-badge">3</div>
-          <div class="nav-link-bg"></div>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="nav_menu-right">
-    <div class="nav-link-wrap">
-      <a href="/Podstrona-3/" class="nav-link w-inline-block">
-        <p class="text-simple">Poradniki</p>
-        <div class="nav-link-bg"></div>
-      </a>
-    </div>
-    <div class="nav-link-wrap">
-      <a href="/Podstrona-1/" class="nav-link w-inline-block">
-        <p class="text-simple">Kim jesteśmy?</p>
-        <div class="nav-link-bg"></div>
-      </a>
-    </div>
-    <div class="nav_buttons-wrap">
-      <div>
-                    <a href="/Podstrona-4/" class="button w-inline-block">
+              <div class="nav_04-menu-links">
+                <div class="nav-link-wrap">
+                  <a href="#" class="nav-link w-inline-block">
+                    <p class="text-simple">Strona główna</p>
+                    <div class="nav-link-bg"></div>
+                  </a>
+                </div>
+                <div class="nav-link-wrap">
+                  <a href="#" class="nav-link w-inline-block">
+                    <p class="text-simple">Inspiracje</p>
+                    <div class="nav-link-bg"></div>
+                  </a>
+                </div>
+                <div class="nav-link-wrap flex-center">
+                  <div>
+                    <a href="#" target="_blank" class="nav-link w-inline-block">
+                      <p class="text-simple">Podróże</p>
+                      <div class="nav-badge">3</div>
+                      <div class="nav-link-bg"></div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="nav_menu-right">
+                <div class="nav-link-wrap">
+                  <a href="#" class="nav-link w-inline-block">
+                    <p class="text-simple">Poradniki</p>
+                    <div class="nav-link-bg"></div>
+                  </a>
+                </div>
+                <div class="nav-link-wrap">
+                  <a href="#" class="nav-link w-inline-block">
+                    <p class="text-simple">Kim jesteśmy?</p>
+                    <div class="nav-link-bg"></div>
+                  </a>
+                </div>
+                <div class="nav_buttons-wrap">
+                  <div>
+                    <a href="#" class="button w-inline-block">
                       <p class="text-simple">Skontaktuj się!</p>
                       <div class="button-icon">
                         <div class="button-icon w-embed"><svg height="17" viewbox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg" class="button-icon">
