--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <div class="grid-content">
                     <div class="vertical-flex">
                       <div class="hero-anim-load-1st">
-                        <h1 class="heading-style-hero">pODRÓŻE TO SENS ŻYCIA I NASZA PASJA</h1>
+                        <h1 class="heading-style-hero">PODRÓŻE TO SENS ŻYCIA I NASZA PASJA</h1>
                       </div>
                     </div>
                   </div>
@@ -141,7 +141,7 @@
                             </div>
                           </div>
                           <div class="subcribers-wrap-2 subcribers-wrap-hero">
-                            <div class="subscribers-images"><img loading="lazy" src="images/person-avatar-1.svg" alt="" class="subscriber-image"><img loading="lazy" src="images/person-avatar-2.svg" alt="" class="subscriber-image subscriber2-image"><img loading="lazy" src="images/person-avatar-3.svg" alt="" class="subscriber-image subcriber3-image"></div>
+                            <div class="subscribers-images"><img loading="lazy" src="images/person-avatar-1.png" alt="" class="subscriber-image"><img loading="lazy" src="images/person-avatar-2.png" alt="" class="subscriber-image subscriber2-image"><img loading="lazy" src="images/person-avatar-3.png" alt="" class="subscriber-image subcriber3-image"></div>
                             <p class="text-size-regular-6 text-color-inherit">Raz w miesiącu otrzymasz od nas garść inspiracji i pomysłów.</p>
                           </div>
                         </div>
