--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="blog_02-grid">
                   <div class="grid-content">
                     <a href="/Podstrona-1/" class="blog_item-link w-inline-block">
-                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/a-backpacker-touristing-into-high-risky-mountains-pho--p-500.png 500w, images/a-backpacker-touristing-into-high-risky-mountains-pho--p-800.png 800w, images/a-backpacker-touristing-into-high-risky-mountains-pho--p-1080.png 1080w, images/a-backpacker-touristing-into-high-risky-mountains-pho-.png 1500w" alt="" src="images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" loading="lazy" class="blog_image"></div>
+                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/a-group-of-young-people-sitting-on-a-roof-overlooking-" loading="lazy" class="blog_image"></div>
                       <div class="blog_02-content">
                         <p class="text-size-regular-7">Poznaj nas lepiej</p>
                         <h2 class="heading-style-h4">Rodzinne podróże i przygody</h2>
