--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   <div data-w-id="4cab8d30-ffcf-aea7-52ef-f35b2a4a6b05" class="home-hero-09-image-wrap">
                     <div class="hero-image-wrap"><img sizes="(max-width: 1000px) 100vw, 1000px" srcset="images/hiker-in-grassy-landscape-cw2c5-p-500.png 500w, images/hiker-in-grassy-landscape-cw2c5-p-800.png 800w, images/hiker-in-grassy-landscape-cw2c5-p-1080.png 1080w, images/hiker-in-grassy-landscape-cw2c5.png 1240w" alt="" src="images/hiker-in-grassy-landscape-cw2c5.png" loading="lazy" class="hero-image-2"></div>
                     <div class="hero_9-image-1-wrap"><img sizes="(max-width: 1000px) 100vw, 1000px" srcset="images/cyclist-at-sunrise-mg3sq-p-500.png 500w, images/cyclist-at-sunrise-mg3sq-p-800.png 800w, images/cyclist-at-sunrise-mg3sq.png 1000w" alt="" src="images/cyclist-at-sunrise-mg3sq.png" loading="lazy" class="hero_9-image"></div>
-                    <div class="hero_9-image-2-wrap"><img sizes="(max-width: 1130px) 100vw, 1130px" srcset="images/traveler-with-map-r072u-p-500.png 500w, images/traveler-with-map-r072u-p-800.png 800w, images/traveler-with-map-r072u-p-1080.png 1080w, images/traveler-with-map-r072u.png 1130w" alt="" src="images/traveler-with-map-r072u.png" loading="lazy" class="hero_9-image"></div>
+                    <div class="hero_9-image-2-wrap"><img sizes="(max-width: 1130px) 100vw, 1130px" srcset="images/traveler-with-map-r072u-p-500.png" alt="" src="images/traveler-with-map-r072u.png" loading="lazy" class="hero_9-image"></div>
                   </div>
                 </div>
               </div>
@@ -171,7 +171,7 @@
                 <div class="blog_02-grid">
                   <div class="grid-content">
                     <a href="/Podstrona-1/" class="blog_item-link w-inline-block">
-                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" loading="lazy" class="blog_image"></div>
+                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" alt="" src="images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" loading="lazy" class="blog_image"></div>
                       <div class="blog_02-content">
                         <p class="text-size-regular-7">Poznaj nas lepiej</p>
                         <h2 class="heading-style-h4">Rodzinne podróże i przygody</h2>
@@ -183,7 +183,7 @@
                   </div>
                   <div class="grid-content">
                     <a href="/Podstrona-2/" class="blog_item-link w-inline-block">
-                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/aztec-ruins-vacations-cinematic-realistic-national-ge--p-500.png 500w, images/aztec-ruins-vacations-cinematic-realistic-national-ge--p-800.png 800w, images/aztec-ruins-vacations-cinematic-realistic-national-ge--p-1080.png 1080w, images/aztec-ruins-vacations-cinematic-realistic-national-ge-.png 1500w" alt="" src="images/aztec-ruins-vacations-cinematic-realistic-national-ge-.png" loading="lazy" class="blog_image"></div>
+                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/bustling-urban-winter-scene-pYgB3.png" alt="" src="images/bustling-urban-winter-scene-pYgB3.png" loading="lazy" class="blog_image"></div>
                       <div class="blog_02-content">
                         <p class="text-size-regular-7">Odkryj różnorodność</p>
                         <h2 class="heading-style-h4">Przewodnik po ciekawych miejscach</h2>
@@ -195,7 +195,7 @@
                   </div>
                   <div class="grid-content">
                     <a href="/Podstrona-2/" class="blog_item-link w-inline-block">
-                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1074px) 100vw, 1074px" srcset="images/scenic-coastal-view-yjyfb-p-500.png 500w, images/scenic-coastal-view-yjyfb-p-800.png 800w, images/scenic-coastal-view-yjyfb.png 1074w" alt="" src="images/scenic-coastal-view-yjyfb.png" loading="lazy" class="blog_image"></div>
+                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1074px) 100vw, 1074px" srcset="images/Gemini_Generated_Image_ejjss9ejjss9ejjs.png" alt="" src="images/Gemini_Generated_Image_ejjss9ejjss9ejjs.png" loading="lazy" class="blog_image"></div>
                       <div class="blog_02-content">
                         <p class="text-size-regular-7">Wędrówki przyrodnicze</p>
                         <h2 class="heading-style-h4">Najpiękniejsze miejsca w Polsce</h2>
@@ -207,7 +207,7 @@
                   </div>
                   <div class="grid-content">
                     <a href="/Podstrona-3/" class="blog_item-link w-inline-block">
-                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1139px) 100vw, 1139px" srcset="images/poolside-serenity-cifw1-p-500.png 500w, images/poolside-serenity-cifw1-p-800.png 800w, images/poolside-serenity-cifw1-p-1080.png 1080w, images/poolside-serenity-cifw1.png 1139w" alt="" src="images/poolside-serenity-cifw1.png" loading="lazy" class="blog_image"></div>
+                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1139px) 100vw, 1139px" srcset="images/poolside-serenity-cifw1-p-500.png" alt="" src="images/poolside-serenity-cifw1.png" loading="lazy" class="blog_image"></div>
                       <div class="blog_02-content">
                         <p class="text-size-regular-7">Czas na relaks</p>
                         <h2 class="heading-style-h4">Jak odpoczywać z rodziną</h2>
@@ -219,7 +219,7 @@
                   </div>
                   <div class="grid-content">
                     <a href="/Podstrona-2/" class="blog_item-link w-inline-block">
-                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/group-of-people-around-a-food-truck-on-a-street-co-6bf-p-500.png 500w, images/group-of-people-around-a-food-truck-on-a-street-co-6bf-p-800.png 800w, images/group-of-people-around-a-food-truck-on-a-street-co-6bf-p-1080.png 1080w, images/group-of-people-around-a-food-truck-on-a-street-co-6bf.png 1500w" alt="" src="images/group-of-people-around-a-food-truck-on-a-street-co-6bf.png" loading="lazy" class="blog_image"></div>
+                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/group-of-people-around-a-food-truck-on-a-street-co-6bf-p-500.png" alt="" src="images/group-of-people-around-a-food-truck-on-a-street-co-6bf.png" loading="lazy" class="blog_image"></div>
                       <div class="blog_02-content">
                         <p class="text-size-regular-7">Smaki Świata</p>
                         <h2 class="heading-style-h4">Co i gdzie warto spróbować?</h2>
@@ -231,7 +231,7 @@
                   </div>
                   <div class="grid-content">
                     <a href="/Podstrona-3/" class="blog_item-link w-inline-block">
-                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/travelers-corkboard-world-map-with-photographs-mW35K-p-500.png 500w, images/travelers-corkboard-world-map-with-photographs-mW35K-p-800.png 800w, images/travelers-corkboard-world-map-with-photographs-mW35K-p-1080.png 1080w, images/travelers-corkboard-world-map-with-photographs-mW35K.png 1500w" alt="" src="images/travelers-corkboard-world-map-with-photographs-mW35K.png" loading="lazy" class="blog_image"></div>
+                      <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/travelers-corkboard-world-map-with-photographs-mW35K-p-500.png" alt="" src="images/travelers-corkboard-world-map-with-photographs-mW35K.png" loading="lazy" class="blog_image"></div>
                       <div class="blog_02-content">
                         <p class="text-size-regular-7">Inspiracje podróżnicze</p>
                         <h2 class="heading-style-h4">Jak planować idealny wyjazd</h2>
