--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -318,7 +318,7 @@
                     <div class="bento-grid-wide">
                       <div class="bento-grid-wide-img-wrap">
                         <div class="bento-grid-card-6-img-holder">
-                          <div class="bento-mask-bottom"><img loading="lazy" src="../images/hiker-in-grassy-landscape-cw2c5.png" alt="" class="bento-grid-full-wide-image"></div>
+                          <div class="bento-mask-bottom"><img loading="lazy" src="Podstrona-2/images/Gemini_Generated_Image_u44kf3u44kf3u44k.png" alt="" class="bento-grid-full-wide-image"></div>
                         </div>
                       </div>
                       <div class="bento-card-content">
@@ -349,7 +349,7 @@
                 <div class="blog_07-grid">
                   <div class="grid-content">
                     <a href="#" class="blog_07-item-link w-inline-block">
-                      <div class="blog_07-image-wrap"><img loading="lazy" src="../images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" class="blog_image"></div>
+                      <div class="blog_07-image-wrap"><img loading="lazy" src="Podstrona-2/images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" class="blog_image"></div>
                       <div class="blog_06-content">
                         <div class="blog_06-title">
                           <p class="text-size-regular-3 text-weight-semibold">Niezapomniane podróże</p>
@@ -358,7 +358,7 @@
                           <p class="text-size-small">Podróże</p>
                         </div>
                         <div class="blog_06-author">
-                          <div class="author-img-wrap"><img sizes="(max-width: 479px) 100vw, 300px" srcset="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 500w, Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 800w, Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 1080w, Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 1130w" alt="" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
+                          <div class="author-img-wrap"><img sizes="(max-width: 479px) 100vw, 300px" srcset="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" alt="" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
                         </div>
                       </div>
                     </a>
@@ -374,14 +374,15 @@
                           <p class="text-size-small">Podróże</p>
                         </div>
                         <div class="blog_06-author">
-                          <div class="author-img-wrap"><img loading="lazy" src="../images/person-avatar-2.svg" alt="" class="author_image"></div>
+                          <div class="author-img-wrap"><img loading="lazy" src="Podstrona-2/images/portrait-of-a-distinguished-man-ixw7j.png" alt="" class="author_image"></div>
+
                         </div>
                       </div>
                     </a>
                   </div>
                   <div class="grid-content">
                     <a href="#" class="blog_07-item-link w-inline-block">
-                      <div class="blog_07-image-wrap"><img loading="lazy" src="../images/scenic-coastal-view-yjyfb.png" alt="" class="blog_image"></div>
+                      <div class="blog_07-image-wrap"><img loading="lazy" src="Podstrona-2/images/scenic-coastal-view-yjyfb.png" alt="" class="blog_image"></div>
                       <div class="blog_06-content">
                         <div class="blog_06-title">
                           <p class="text-size-regular-3 text-weight-semibold">Pomysły na weekend</p>
@@ -406,14 +407,14 @@
                           <p class="text-size-small">Podróże</p>
                         </div>
                         <div class="blog_06-author">
-                          <div class="author-img-wrap"><img loading="lazy" src="../images/person-avatar-3.svg" alt="" class="author_image"></div>
+                          <div class="author-img-wrap"><img loading="lazy" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
                         </div>
                       </div>
                     </a>
                   </div>
                   <div class="grid-content">
                     <a href="#" class="blog_07-item-link w-inline-block">
-                      <div class="blog_07-image-wrap"><img loading="lazy" src="../images/poolside-serenity-cifw1.png" alt="" class="blog_image"></div>
+                      <div class="blog_07-image-wrap"><img loading="lazy" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
                       <div class="blog_06-content">
                         <div class="blog_06-title">
                           <p class="text-size-regular-3 text-weight-semibold">Relacje z różnych krajów</p>
@@ -422,7 +423,8 @@
                           <p class="text-size-small">Podróże</p>
                         </div>
                         <div class="blog_06-author">
-                          <div class="author-img-wrap"><img loading="lazy" src="../images/person-avatar-1.svg" alt="" class="author_image"></div>
+                          <div class="author-img-wrap"><img loading="lazy" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
+
                         </div>
                       </div>
                     </a>
@@ -438,14 +440,14 @@
                           <p class="text-size-small">Podróże</p>
                         </div>
                         <div class="blog_06-author">
-                          <div class="author-img-wrap"><img loading="lazy" src="../images/person-avatar-2.svg" alt="" class="author_image"></div>
+                          <div class="author-img-wrap"><img loading="lazy" src="Podstrona-2/images/portrait-of-a-distinguished-man-ixw7j.png" alt="" class="author_image"></div>
                         </div>
                       </div>
                     </a>
                   </div>
                   <div class="grid-content">
                     <a href="#" class="blog_07-item-link w-inline-block">
-                      <div class="blog_07-image-wrap"><img loading="lazy" src="../images/aztec-ruins-vacations-cinematic-realistic-national-ge-.png" alt="" class="blog_image"></div>
+                      <div class="blog_07-image-wrap"><img loading="lazy" src="Podstrona-2/images/aztec-ruins-vacations-cinematic-realistic-national-ge-.png" alt="" class="blog_image"></div>
                       <div class="blog_06-content">
                         <div class="blog_06-title">
                           <p class="text-size-regular-3 text-weight-semibold">Przewodnik po nieznanych miejscach</p>
@@ -454,7 +456,7 @@
                           <p class="text-size-small">Podróże</p>
                         </div>
                         <div class="blog_06-author">
-                          <div class="author-img-wrap"><img loading="lazy" src="../images/person-avatar-1.svg" alt="" class="author_image"></div>
+                          <div class="author-img-wrap"><img loading="lazy" src="Podstrona-2/images/portrait-of-a-distinguished-man-ixw7j.png" alt="" class="author_image"></div>
                         </div>
                       </div>
                     </a>
@@ -470,7 +472,7 @@
                           <p class="text-size-small">Podróże</p>
                         </div>
                         <div class="blog_06-author">
-                          <div class="author-img-wrap"><img loading="lazy" src="../images/person-avatar-2.svg" alt="" class="author_image"></div>
+                          <div class="author-img-wrap"><img loading="lazy" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
                         </div>
                       </div>
                     </a>
@@ -527,7 +529,7 @@
                     </div>
                   </div>
                   <div class="grid-content">
-                    <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c33" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="Podstrona-2/images/ai-ntk3tufuma.png" class="features-image">
+                    <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c33" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="Podstrona-2/images/colorful-tabletop-world-globe-GoBlU.png" class="features-image">
                       <div class="features-image-bg"></div>
                       <div class="play-lightbox-2">
                         <div class="lightbox-2-wrap">
@@ -536,7 +538,7 @@
                               <div class="video_play-box">
                                 <div class="card card-full-rounded">
                                   <div class="video_play-content-wrap">
-                                    <div class="video-person-image-wrap"><img loading="lazy" src="../images/person-avatar-1.svg" alt="" class="video-person-image">
+                                    <div class="video-person-image-wrap"><img loading="lazy" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
                                       <div class="home_video-play-icon"><svg style="opacity:0" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewbox="0 0 24 24" fill="none" app="ikonik" class="play-icon">
                                           <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="currentColor" app="ikonik"></path>
                                         </svg></div>
@@ -552,20 +554,6 @@
                                 </div>
                               </div>
                               <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "_id": "example_img",
-      "origFileName": "image-placeholder.svg",
-      "fileName": "image-placeholder.svg",
-      "fileSize": 2063,
-      "height": 150,
-      "url": "https://d3e54v103j8qbb.cloudfront.net/img/image-placeholder.svg",
-      "width": 150,
-      "type": "image"
-    }
-  ],
-  "group": ""
-}</script>
                             </a>
                           </div>
                           <div class="lightbox-2-overlay"></div>
