--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <div class="grid-content">
                     <div class="vertical-flex">
                       <div class="hero-anim-load-1st">
-                        <h1 class="heading-style-hero">PODRÓŻE TO SENS ŻYCIA I NASZA PASJA</h1>
+                        <h1 class="heading-style-hero">PODRÓŻE TO NASZA PASJA I SENS ŻYCIA</h1>
                       </div>
                     </div>
                   </div>
