--- a/Podstrona-1/index.html
+++ b/Podstrona-1/index.html
@@ -405,6 +405,16 @@
                       <h3 class="heading-style-h3">Ponad 1000 zdjęć z naszych przygód do podzielenia się.</h3>
       </div>
     </div>
+    <div mdlfy-content="component" class="footer_wrapper">
+      <div class="section">
+        <div class="footer_wrap">
+          <div class="padding-global">
+            <div class="container-medium">
+              <div class="padding-section-medium">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="footer_04-content-holder">
+                      <div id="w-node-_68a6d974-27c2-1b73-4cbb-5df1e7502f63-05a77523" class="footer_04-content">
                         <div class="footer_04-brand-concept">
                           <a href="#" class="footer_04-logo w-inline-block">
                             <div class="footer_logo-wrap">
