--- a/Podstrona-1/index.html
+++ b/Podstrona-1/index.html
@@ -402,6 +402,10 @@
                     <div class="margin-xsmall margin-top">
                       <h2 class="text-size-big">1000</h2>
                       <h3 class="heading-style-h3">Ponad 1000 zdjęć z naszych przygód do podzielenia się.</h3>
+                    </div>
+                  </div>
+                         </div>
+                      </div>
       </div>
     </div>
     <div mdlfy-content="component" class="footer_wrapper">
