--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Oct 31 2025 15:45:22 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="690487f47c61826389c1cd53" data-wf-site="690487f27c61826389c1cc3d">
+<!DOCTYPE html><html data-wf-page="690487f47c61826389c1cd53" data-wf-site="690487f27c61826389c1cc3d">
 <head>
   <meta charset="utf-8">
   <title>Podróże - strona główna</title>
@@ -111,7 +110,7 @@
                   <div class="grid-content">
                     <div class="vertical-flex">
                       <div class="hero-anim-load-1st">
-                        <h1 class="heading-style-hero">pODRÓŻE TO SENS ŻYCIA I NASZA PASJA</h1>
+                        <h1 class="heading-style-hero">PODRÓŻE TO NASZA PASJA I SENS ŻYCIA</h1>
                       </div>
                     </div>
                   </div>
