--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -114,7 +114,7 @@
                   </div>
                 </div>
                 <div style="opacity:0;-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-anim-load-2nd">
-                  <div class="header-11-image-wrap"><img sizes="(max-width: 1208px) 100vw, 1208px" srcset="images/retro-yellow-telephone-pfntr-p-500.jpeg 500w, images/retro-yellow-telephone-pfntr-p-800.jpeg 800w, images/retro-yellow-telephone-pfntr-p-1080.jpeg 1080w, images/retro-yellow-telephone-pfntr.jpeg 1208w" alt="" src="images/retro-yellow-telephone-pfntr.jpeg" loading="lazy" class="header-background"></div>
+                  <div class="header-11-image-wrap"><img sizes="(max-width: 1208px) 100vw, 1208px" srcset="Podstrona-4/images/retro-yellow-telephone-pfntr-p-1080.jpeg 1080w alt="" src="images/retro-yellow-telephone-pfntr.jpeg" loading="lazy" class="header-background"></div>
                 </div>
               </div>
             </div>
@@ -329,7 +329,7 @@
                         <div class="feature_34-image"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004af749225d3eedb4b4_image%202.avif" alt="" class="feature_item-image"></div>
                       </div>
                       <div id="w-node-_196f1699-7cb5-9d28-96a8-0ebb022de5b0-48f2e761" class="features-34-4th-image">
-                        <div class="feature_34-image"><img sizes="(max-width: 1125px) 100vw, 1125px" srcset="images/world-map-tote-bag-vfjrg-p-500.png 500w, images/world-map-tote-bag-vfjrg-p-800.png 800w, images/world-map-tote-bag-vfjrg-p-1080.png 1080w, images/world-map-tote-bag-vfjrg.png 1125w" alt="" src="images/world-map-tote-bag-vfjrg.png" loading="lazy" class="feature_item-image"></div>
+                        <div class="feature_34-image"><img sizes="(max-width: 1125px) 100vw, 1125px" srcset="Podstrona-4/images/world-map-tote-bag-vfjrg-p-1080.png 1080w" alt="" src="images/world-map-tote-bag-vfjrg.png" loading="lazy" class="feature_item-image"></div>
                       </div>
                     </div>
                   </div>
