--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -179,7 +179,7 @@
                       </div>
                       <div class="form_field-wrapper"><label for="Message-10" class="form_label">Załącznik</label><textarea id="Message-10" name="Message" maxlength="5000" data-name="Możesz dołączyć plik" placeholder="Możesz dołączyć plik" class="form-input is-text-area w-input"></textarea></div>
                       <div class="form_field-wrapper"><label class="w-checkbox form_checkbox">
-                          <div class="w-checkbox-input w-checkbox-input--inputType-custom form_checkbox-icon"></div><input type="checkbox" name="Checkbox-3" id="Checkbox-3" data-name="Checkbox 3" required="" style="opacity:0;position:absolute;z-index:-1"><span class="form_label margin-0 w-form-label" for="Checkbox-3">I accept these <a href="#" class="text-style-link-s">Velit Lorem adipisicing consectetur dolor qui proident fugiat culpa ex</a></span>
+                          <div class="w-checkbox-input w-checkbox-input--inputType-custom form_checkbox-icon"></div><input type="checkbox" name="Checkbox-3" id="Checkbox-3" data-name="Checkbox 3" required="" style="opacity:0;position:absolute;z-index:-1"><span class="form_label margin-0 w-form-label" for="Checkbox-3">Akceptuję <a href="#" class="text-style-link-s">Regulamin</a></span>
                         </label></div>
                       <div data-w-id="196f1699-7cb5-9d28-96a8-0ebb022de55e" style="opacity:0" class="contact-button-wrap"><input type="submit" data-wait="Please wait..." class="button w-button" value="Submit"></div>
                     </form>
@@ -478,7 +478,7 @@
                           </div>
                           <div class="margin-small margin-top">
                             <div class="subcribers-wrap-2">
-                              <div class="subscribers-images"><img loading="lazy" src="/Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" class="subscriber-image"><img sizes="100vw" srcset="/Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" src="/Podstrona-4/images/professional-young-woman-portrait-i4pg2-p-500.png" loading="lazy" class="subscriber-image subscriber2-image"><img loading="lazy" src="/Podstrona-4/images/professional-young-woman-portrait-i4pg2-p-500.png" alt="" class="subscriber-image subcriber3-image"></div>
+                              <div class="subscribers-images"><img loading="lazy" src="/Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" class="subscriber-image"><img sizes="100vw" srcset="/Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" src="/Podstrona-4/images/portrait-of-a-distinguished-man-ixw7j-p-500.png" loading="lazy" class="subscriber-image subscriber2-image"><img loading="lazy" src="/Podstrona-4/images/professional-young-woman-portrait-i4pg2-p-500.png" alt="" class="subscriber-image subcriber3-image"></div>
                               <div class="opacity-70pct">
                                 <p class="text-size-regular-10">Ponad 2000 subskrybentów</p>
                               </div>
