--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -478,7 +478,7 @@
                           </div>
                           <div class="margin-small margin-top">
                             <div class="subcribers-wrap-2">
-                              <div class="subscribers-images"><img loading="lazy" src="/Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" class="subscriber-image"><img sizes="100vw" srcset="/Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" src="/Podstrona-4/images/portrait-of-a-distinguished-man-ixw7j-p-500.png" loading="lazy" class="subscriber-image subscriber2-image"><img loading="lazy" src="/Podstrona-4/images/professional-young-woman-portrait-i4pg2-p-500.png" alt="" class="subscriber-image subcriber3-image"></div>
+<div class="subscribers-images"><img loading="lazy" src="/Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" class="subscriber-image"><img sizes="100vw" srcset="/Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" src="/Podstrona-4/images/portrait-of-a-distinguished-man-ixw7j-p-500.png" loading="lazy" alt="" class="subscriber-image subscriber2-image"><img loading="lazy" src="/Podstrona-4/images/professional-young-woman-portrait-i4pg2-p-500.png" alt="" class="subscriber-image subcriber3-image"></div>
                               <div class="opacity-70pct">
                                 <p class="text-size-regular-10">Ponad 2000 subskrybentów</p>
                               </div>
