--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -12,20 +12,6 @@
   <link href="/Podstrona-2/css/podroze---inspiracje-f090ed.webflow.css" rel="stylesheet" type="text/css">
   <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="/images/webclip.png" rel="apple-touch-icon">
-  <style>
-    /* Reduce excessive spacing */
-    .feature-wrapper .padding-section-medium,
-    .stats_wrapper .padding-section-medium,
-    .faq_wrapper .padding-section-medium,
-    .gallery_wrapper .section,
-    .cta_wrapper .padding-section-medium {
-      padding-top: 3rem;
-      padding-bottom: 3rem;
-    }
-    .spacer-xxlarge {
-      height: 2rem;
-    }
-  </style>
 </head>
 <body>
   <div class="podr-e">
@@ -33,7 +19,13 @@
       <div class="navbar">
         <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9ac2" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav_04 w-nav">
           <div class="container-medium nav-container nav-04-container">
-             </div>
+		    <div class="nav_04-logo">
+              <a href="/" class="nav-logo-link w-nav-brand">
+                <div class="nav-logo-wrap">
+                  <div class="logo-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004c98b7569fb3bea9e1_Logo.svg" alt="Logo" class="logo-image"></div>
+                </div>
+              </a>
+            </div>
             <nav role="navigation" class="nav_04-menu w-nav-menu">
   <div class="nav_04-menu-links">
     <div class="nav-link-wrap-2">
