--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -20,7 +20,7 @@
         <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9ac2" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav_04 w-nav">
           <div class="container-medium nav-container nav-04-container">
 		    <div class="nav_04-logo">
-              <a href="/" class="nav-logo-link w-nav-brand">
+              <a href="#" class="nav-logo-link w-nav-brand">
                 <div class="nav-logo-wrap">
                   <div class="logo-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004c98b7569fb3bea9e1_Logo.svg" alt="Logo" class="logo-image"></div>
                 </div>
