--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -19,7 +19,7 @@
         <div data-w-id="196f1699-7cb5-9d28-96a8-0ebb022de4bf" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav_04 w-nav">
           <div class="container-medium nav-container nav-04-container">
             <div class="nav_04-logo">
-              <a href="/" class="nav-logo-link w-nav-brand">
+              <a href="#" class="nav-logo-link w-nav-brand">
                 <div class="nav-logo-wrap">
                   <div class="logo-wrap"></div>
                 </div>
