--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html data-wf-page="690487f47c61826389c1cd53" data-wf-site="690487f27c61826389c1cc3d">
+<!DOCTYPE html>
+<html lang="pl" data-wf-page="6904891658e8b99248f2e761" data-wf-site="6904891558e8b99248f2e60b">
 <head>
   <meta charset="utf-8">
   <title>Podróże - strona główna</title>
@@ -42,7 +43,6 @@
                   <div>
                     <a href="/Podstrona-2/" class="nav-link w-inline-block">
                       <p class="text-simple">Podróże</p>
-                      <div class="nav-badge">3</div>
                       <div class="nav-link-bg"></div>
                     </a>
                   </div>
