--- a/Podstrona-1/index.html
+++ b/Podstrona-1/index.html
@@ -194,7 +194,6 @@
                           <li>Wierzymy, że obrazy potrafią lepiej oddać emocje z naszych podróży, dlatego staramy się dokumentować każdy wyjątkowy moment, który spotykamy.</li>
                         </ol>
                         <h6>Dołącz do nas!</h6>
-                       <h6>Dołącz do nas!</h6>
                       </div>
                     </div>
                   </div>
@@ -827,3 +826,4 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=69048851f3c1e3c305a774b5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
+</html>
