--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -163,7 +163,7 @@
                           <div class="margin-medium margin-top">
                             <div class="hero-anim-load-4th">
                               <div class="author_small-info">
-                                <div class="author-img-wrap"><img sizes="(max-width: 479px) 100vw, 300px" srcset="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 500w, Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 800w, Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 1080w, Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 1130w" alt="" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
+                                <div class="author-img-wrap"><img sizes="(max-width: 479px) 100vw, 300px" srcset="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png 500w" alt="" src="Podstrona-2/images/professional-young-woman-portrait-i4pg2.png" loading="lazy" class="author_image"></div>
                                 <p class="text-size-small text-color-white">Ewa</p>
                               </div>
                             </div>
@@ -191,7 +191,7 @@
                     <div class="bento-grid-normal">
                       <div class="bento-grid-normal-img-wrap">
                         <div class="bento-grid-card-1-img-holder">
-                          <div class="bento-mask-bottom"><img loading="lazy" src="/images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" class="bento-grid-wide-img"></div>
+                          <div class="bento-mask-bottom"><img loading="lazy" src="Podstrona-2/images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" class="bento-grid-wide-img"></div>
                         </div>
                       </div>
                       <div class="bento-card-content">
@@ -213,7 +213,7 @@
                     <div class="bento-grid-tall">
                       <div class="bento-grid-tall-image-wrap">
                         <div class="bento-grid-card-2-img-holder">
-                          <div class="bento-mask-bottom"><img loading="lazy" src="/images/hiker-in-scenic-nature-ao2xj.jpeg" alt="" class="bento-grid-normal-img"></div>
+                          <div class="bento-mask-bottom"><img loading="lazy" src="Podstrona-2/images/hiker-in-scenic-nature-ao2xj.jpeg" alt="" class="bento-grid-normal-img"></div>
                         </div>
                       </div>
                       <div class="bento-card-content">
@@ -235,7 +235,7 @@
                     <div class="bento-grid-tall">
                       <div class="bento-grid-tall-image-wrap">
                         <div class="bento-grid-card-3-img-holder">
-                          <div class="bento-mask-bottom"><img loading="lazy" src="/images/cyclist-at-sunrise-mg3sq.png" alt="" class="bento-grid-normal-img"></div>
+                          <div class="bento-mask-bottom"><img loading="lazy" src="Podstrona-2/images/cyclist-at-sunrise-mg3sq.png" alt="" class="bento-grid-normal-img"></div>
                         </div>
                       </div>
                       <div class="bento-card-content">
@@ -257,7 +257,7 @@
                     <div class="bento-grid-normal">
                       <div class="bento-grid-normal-img-wrap">
                         <div class="bento-grid-card-img-4-holder">
-                          <div class="bento-mask-bottom"><img loading="lazy" src="/images/traveler-with-map-r072u.png" alt="" class="bento-grid-wide-img"></div>
+                          <div class="bento-mask-bottom"><img loading="lazy" src="Podstrona-2/images/traveler-with-map-r072u.png" alt="" class="bento-grid-wide-img"></div>
                         </div>
                       </div>
                       <div class="bento-card-content">
@@ -279,7 +279,7 @@
                     <div class="bento-grid-normal">
                       <div class="bento-grid-normal-img-wrap">
                         <div class="bento-grid-card-5-img">
-                          <div class="bento-mask-bottom"><img loading="lazy" src="/images/group-of-people-around-a-food-truck-on-a-street-co-6bf.png" alt="" class="bento-grid-wide-img"></div>
+                          <div class="bento-mask-bottom"><img loading="lazy" src="Podstrona-2/images/group-of-people-around-a-food-truck-on-a-street-co-6bf.png" alt="" class="bento-grid-wide-img"></div>
                         </div>
                       </div>
                       <div class="bento-card-content">
