--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -344,7 +344,7 @@
           <div class="container-medium container-on-bg">
             <div class="padding-section-medium">
               <div class="linkpage-content">
-                <div class="linkpage_image-wrap"><img sizes="100vw" srcset="/Podstrona-2/images/intimate-portrait-of-a-couple-9kxvs-p-500.jpeg" alt="" src="/Podstrona-2/images/intimate-portrait-of-a-couple-9kxvs.jpeg" loading="lazy" class="linkpage_profile-image"></div>
+                <div class="linkpage_image-wrap"><img sizes="100vw" srcset="images/intimate-portrait-of-a-couple-9kxvs-p-500.jpeg 500w, images/intimate-portrait-of-a-couple-9kxvs-p-800.jpeg 800w, images/intimate-portrait-of-a-couple-9kxvs-p-1080.jpeg 1080w, images/intimate-portrait-of-a-couple-9kxvs.jpeg 1240w" alt="" src="images/intimate-portrait-of-a-couple-9kxvs.jpeg" loading="lazy" class="linkpage_profile-image"></div>
                 <h2 class="heading-style-h4 text-color-white">Ewa i Tomek</h2>
                 <div class="margin-xsmall margin-top">
                   <p class="text-size-regular-10 text-color-white">Skontaktuj się z nami w prosty sposób</p>
